pages/css/points-leaderboard.css
html.solid-background {
  background: var(--background-color);
}
html.solid-background body {
  background: transparent !important;
}
#content {
  scroll-behavior: smooth;
  padding: 0;
  overflow: auto;
  position: relative;  
}
div .segmentInfo {
  display: flex;
  flex-direction: column;
  align-items: baseline;
  justify-content: left;
  white-space: nowrap;  
  width: 100%;    
  font-variant: small-caps tabular-nums;
  font-size: calc(var(--font-scale) * 0.9em);
}
table td.info {
  text-align: left;
  width: 50%;
}

div .segmentData {
  display: flex;
  flex-direction: column;
  align-items: baseline;
  justify-content: left;
  white-space: nowrap;
  overflow-x: hidden;  
  width: 100%;  
  font-variant: small-caps tabular-nums;
  font-size: calc(var(--font-scale) * 0.8em);
  padding: 2px;
  margin: 2px;
}
div .segmentData .data {
  width: 100%
}

.container {
  width: 100%;  
}

table {
  width: 100%;
  border-collapse: collapse;
  font-size: calc(var(--font-scale) * 0.8em);
}

td {  
  text-align: left;
  white-space: nowrap; 
  
}
td.teamName {
  cursor: pointer
}
td.teamName:hover {
  text-decoration: underline;
}
th {
  text-align: left;
  white-space: nowrap; 
  font-variant: small-caps tabular-nums;
  font-size: calc(var(--font-scale) * 0.75em);
}

th:not(:nth-child(2)), td:not(:nth-child(2)) {
  width: 1%; 
  padding-right: 10px;
  text-align: right;
  line-height: var(--line-spacing);
}

th:nth-child(2), td:nth-child(2) {
  position: relative;
  overflow: hidden;
  height: auto;
  white-space: normal;
  line-height: var(--line-spacing);
}
table tr.watching {
  background-image: linear-gradient(135deg, hsl(var(--theme-primary-hue) var(--theme-primary-sat) var(--theme-primary-light)/85%), hsl(var(--theme-primary-hue) var(--theme-primary-sat) calc(var(--theme-primary-light) + -10% * var(--theme-primary-shade-dir))/80%));
  color: hsl(var(--theme-primary-hue) var(--theme-primary-sat) calc(var(--theme-primary-light) + 100% * var(--theme-primary-shade-dir))/100%);
}
table tr.marked {
  background-image: linear-gradient(135deg, hsl(var(--theme-marked-hue) var(--theme-marked-sat) var(--theme-marked-light)/75%), hsl(var(--theme-marked-hue) var(--theme-marked-sat) calc(var(--theme-marked-light) + -10% * var(--theme-marked-shade-dir))/80%));
  color: hsl(var(--theme-marked-hue) var(--theme-marked-sat) calc(var(--theme-marked-light) + 100% * var(--theme-marked-shade-dir))/100%);
}
table tr.teammate {
  background-image: linear-gradient(135deg, hsl(var(--theme-following-hue) var(--theme-following-sat) var(--theme-following-light)/80%), hsl(var(--theme-following-hue) var(--theme-following-sat) calc(var(--theme-following-light) + -10% * var(--theme-following-shade-dir))/80%));
  color: hsl(var(--theme-following-hue) var(--theme-following-sat) calc(var(--theme-following-light) + 100% * var(--theme-following-shade-dir))/100%);
}
tr.hidden {
  display: none;
}
tr.shown {
  display: table-row;
}
table .table-racers {
  width: 100%;
  max-width: 100%;
  table-layout: auto;
  border-collapse: collapse;
  font-size: calc(var(--font-scale) * 0.5em);
}
table .table-racers td {
  padding-right: 2em;
  text-align: left;
  min-width: 0;
}
table .table-racers .segName {
  max-width: 0;
  width: 25%;
}
table .table-racers .segScore {
  max-width: 0;
  width: 10%;
}
table .table-segments {
  width: 100%;
  max-width: 100%;
  table-layout: auto;
  border-collapse: collapse;
  font-size: calc(var(--font-scale) * 0.5em);
}
table .table-segments td {
  padding-right: 2em;
  text-align: left;
  min-width: 0;
  border-bottom: 1px solid #ccc;  
}
table .table-segments th {
  padding-right: 2em;
  text-align: center;
  min-width: 0;
}
table .table-segments td:nth-child(2),
table .table-segments td:nth-child(3),
table .table-segments td:nth-child(5),
table .table-segments td:nth-child(6) {
  padding-right: 2em;
  text-align: right;
  min-width: 0;
  width: 1%;
}
table .table-segments td:nth-child(1),
table .table-segments td:nth-child(4) {
  padding-right: 2em;  
  text-align: left;
  min-width: 0;
  width: 50%;
}
table .table-segments td:nth-child(4) { 
  padding-left: 1em;
}
table .table-segments td:nth-child(3) {
  border-right: 1px solid #ccc;
}
div .info-item-team {
  margin-top: -0.03em;
  display: inline-table;
}
div .info-item-team span {
  background-image: linear-gradient(var(--o101lg1), var(--o101lg2));
  border-radius: 4px;
  font-weight: var(--weight);
  padding: 0 0.4em 0 0.4em;
  color: var(--o101c);
  zoom: 0.6;
  text-align: right;
}
#info-item-team {
  position: absolute;
  top: 0;
  right: 0;
  white-space: nowrap;
  z-index: 1;
  background-image: linear-gradient(var(--o101lg1), var(--o101lg2));
  border-radius: 4px;
  font-weight: var(--weight);
  padding: 0 0.4em;
  color: var(--o101c);
  zoom: var(--badge-scale);
}
#info-item-team-l {
  position: absolute;
  top: 0;
  left: 0;
  white-space: nowrap;
  z-index: 1;
  background-image: linear-gradient(var(--o101lg1), var(--o101lg2));
  border-radius: 4px;
  font-weight: var(--weight);
  padding: 0 0.4em;
  color: var(--o101c);
  /*zoom: var(--badge-scale);*/
  zoom: 1;
}
#badgePreview {
  white-space: nowrap;
  z-index: 1;
  background-image: linear-gradient(var(--o101lg1), var(--o101lg2));
  border-radius: 4px;
  font-weight: var(--weight);
  padding: 0 0.4em;
  color: var(--o101c);
  zoom: var(--badge-scale);
  width: fit-content;
}
#riderName {
  position: absolute;
  bottom: 0;
  left: 0;
  white-space: nowrap;
  z-index: 2;
}
#events {
  display: flex;
  flex-wrap: wrap;
}
#events .p-course {
  display: flex;
  align-items: center;
}
#selectEvent {
  max-width: 27em;
}
div .points-view {
  display: flex;
  align-items: center;
  font-size: 0.8em;
}
#importExport {
  padding: 25px;
  font-size: 1.1em;
}
#jsonFormat {
  width: 100%;
  caret-color: auto;
}
.zenButton {
  background: transparent;
  border: none;
  color: inherit;
  font-size: inherit;
  cursor: pointer;  
}
.zenButton:hover {
  opacity: 0.7;
}
div .pointsTitle {
  text-align: center;
  font-size: calc(var(--font-scale) * 0.6em);
}

.title {
  font-size: calc(var(--font-scale) * 0.8em);
  font-weight: bold;
  text-align: center;
  margin-bottom: 10px;
}
#thisTeamTable td:not(:nth-child(4)), th:not(:nth-child(4)) {
  text-align: left;
}
#thisTeamTable td:nth-child(4) {
  text-align: center;
  cursor: pointer;}
#thisTeamTable td:nth-child(4):hover {
  text-decoration: underline;
}
#sgEntrantsTable td:not(:nth-child(4)), th:not(:nth-child(4)){
  text-align: left;
}
#sgEntrantsTable th:hover {
  cursor: pointer
}
#sgEntrantsTable select {
  /* font-size: 0.7em; */
  margin: 0 0 0 1em;
  background: hsl(var(--theme-fg-hue), var(--theme-fg-sat), calc(var(--theme-fg-light) + 80% * var(--theme-fg-shade-dir)), 0.8);;
  color: #fff;
  border-color: rgba(51, 51, 51, 0.2);
}
#pointsTable th {
  position: sticky;
  top: 0;
  z-index: 5;
  /* background-color: black; */
  background-color: hsl(var(--theme-bg-hue), var(--theme-bg-sat), var(--theme-bg-light), 100%);
}
#pointsTableLast th {
  position: sticky;
  top: 0;
  z-index: 5;
  /* background-color: black; */
  background-color: hsl(var(--theme-bg-hue), var(--theme-bg-sat), var(--theme-bg-light), 100%);
}
#pointsTable .rank {
  max-width: 0;
  width: 10%;
  text-align: right;
}
#pointsTable .teamName {
  max-width: 0;
  width: 50%;
}
#pointsTable .fal {
  max-width: 0;
  width: 10%;
  text-align: right;
}
#pointsTable .fts {
  max-width: 0;
  width: 10%;
  text-align: right;
}
#pointsTable .fin {
  max-width: 0;
  width: 10%;
  text-align: right;
}
#pointsTable .teamScore {
  max-width: 0;
  width: 10%;
  text-align: right;
}
#pointsTable .container {
  padding-left: 10%;
  padding-right: 10%;
}
#pointsTable > tbody > tr:nth-child(4n-1) {
  background-color: hsl(var(--theme-intrinsic-inverted-hue), var(--theme-intrinsic-inverted-sat), calc(var(--theme-intrinsic-inverted-light) + 0% * var(--theme-intrinsic-inverted-shade-dir)), 0.1);
}
#teamRiderScores {
  border: 1px dotted #fff
}
#teamRiderScores .name {
  max-width: 0;
  width: 50%;
  text-align: left;
}
#teamRiderScores .score {
  max-width: 0;
  width: 10%;
  text-align: right;
}
#importantScores {
  font-variant: small-caps tabular-nums;
  font-size: calc(var(--font-scale) * 0.8em);
}
#lastSegmentImportantScores {
  font-variant: small-caps tabular-nums;
  font-size: calc(var(--font-scale) * 0.8em);
}
#drsDisplay {
  display: none;
  flex-direction: row;
  margin: 0 auto;
  margin-top: 20px;
  background-image: linear-gradient(135deg, hsl(var(--theme-primary-hue) var(--theme-primary-sat) var(--theme-primary-light)/85%), hsl(var(--theme-primary-hue) var(--theme-primary-sat) calc(var(--theme-primary-light) + -10% * var(--theme-primary-shade-dir))/80%));
}
#drsImg {
  height: 60px;
}
#drsImg img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}
#drsInfo {
  font-size: calc(var(--font-scale) * 1em);
  vertical-align: middle;
}
.drsImport {
  position: fixed;
  top: 75px;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.5);
  display: flex;
  align-items: flex-start;
  justify-content: center;
  padding-top: 10vh;
  z-index: 9999;
}
.importInfo {
  padding: 10px;
  background: black;
  width: 60vw;
  height: 60vh;
  position: relative;
  display: flex;
  flex-direction: row;
  overflow: auto;
  font-size: calc(var(--font-scale) * 0.8em);
}
.importClose {
  position: absolute;
  top: 8px;
  right: 8px;
  background: #111;
  color: #fff;
  border-color: rgba(51, 51, 51, 0.5);
  cursor: pointer;
  font-size: calc(var(--font-scale) * 1.3em);
}
.hidden {
  display: none !important;
}
#importText {
  width: 50%;
  height: 200px;
}
#importPens {
  display: flex;
  flex-direction: row;
}
#importDrsSaveButton {
  display: none;
}
#importPensRight {
  display: flex;
  flex-direction: column;
  padding-left: 10px;
}
tr.teamScoreDetails {
  display: none
}
.warning { 
  background-color: yellow;
  color: black;
  white-space: unset !important; 
  padding-left: 10px !important;
  padding-right: 10px !important;
}
.summarySegment {
  display: flex;
  flex-direction: row;
  width: 100%;
}
.summaryName {
  width: 75%;
  overflow-x: hidden;
}
.summaryFormat {
  width: 25%;
}
.summaryTitle {
  width: 100%;
  text-align: center;
}
.summaryContainer {
  width: 100%;
  padding: 5px;
}
#renameDialogButtons {
  display: flex;
  flex-direction: row;
  padding-top: 10px;
  padding-bottom: 10px;
}
#nextSegment {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 10px;
  font-size: calc(var(--font-scale) * 0.6em);
  font-variant: small-caps tabular-nums;
  padding-left: 2px;
  padding-right: 2px;
  border: 1px solid rgba(255, 255, 255, 0.4);
  border-radius: 4px;
  overflow: hidden;
  margin: 3px;
}
#summaryTable td {
  text-align: left;
}
#segmentHintTable {
  width: 100%;
  text-align: left !important;
  font-size: calc(var(--font-scale) * 1em);
  font-variant: small-caps tabular-nums;
  table-layout: fixed;
}
#segmentHintTable .nextSegmentName {
  width: 60%;
  text-align: left !important;
  overflow: hidden;
}
#segmentHintTable .nextSegmentInfo {
  width: 20%;
  text-align: left !important;
  overflow: hidden;
}

